# samd21-line-bootloader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
api/bl/: api.h
config/: metainfo.h.in
docs/: .gitignore  CMakeLists.txt  Doxyfile  conf.py  index.rst  integration.rst  requirements.txt
docs/arch/: flow.drawio  index.rst
docs/c_api/: index.rst  private.rst  public.rst
docs/design/: configuration.rst  crc.rst  index.rst  layout.rst
include/bl/: boot.h  bootheader.h  comm.h  config.h  flash.h  init.h
ld/: bootloader.ld  memory.ld
src/: boot.c  bootheader.c  comm.c  diag.c  flash.c  init.c  key.c  main.c  tasks.c
tests/application/: CMakeLists.txt  application.ld  config.json  init.c  main.c  tasks.c
tests/functional/: .config.in  .gitignore  CMakeLists.txt  README.md  conftest.py  pytest.ini  test_booting.py  test_flashing.py  test_transitions.py  test_write.py
tools/: requirements.txt
tools/cmake/: armgcc-toolchain.cmake
tools/header-generator/: generate.py
